Refactor support components: update senderType to 'admin', enhance layout styles, and optimize imports for better performance

--- a/src/i18n/locales/meta/tr.json
+++ b/src/i18n/locales/meta/tr.json
@@ -12,7 +12,7 @@
     "description": "Hesabınızı doğrulayın ve giriş yapın."
   },
   "home": {
-    "title": "Gösterge Paneli",
+    "title": "Ana Sayfa",
     "description": "GeckoPlus Web yönetim paneline hoş geldiniz."
   },
   "all-users": {
