--- a/src/i18n/locales/tr.json
+++ b/src/i18n/locales/tr.json
@@ -1,1 +1,27 @@
-{}
+{
+  "daily": "Günlük",
+  "weekly": "Haftalık",
+  "monthly": "Aylık",
+  "view": "Görünüm",
+  "time": "Süre (dk)",
+  "mondayShort": "Pzt",
+  "tuesdayShort": "Sal",
+  "wednesdayShort": "Çar",
+  "thursdayShort": "Per",
+  "fridayShort": "Cum",
+  "saturdayShort": "Cmt",
+  "sundayShort": "Paz",
+
+  "january": "Ocak",
+  "february": "Şubat",
+  "march": "Mart",
+  "april": "Nisan",
+  "may": "Mayıs",
+  "june": "Haziran",
+  "july": "Temmuz",
+  "august": "Ağustos",
+  "september": "Eylül",
+  "october": "Ekim",
+  "november": "Kasım",
+  "december": "Aralık"
+}
