add Customer, Package, PackageContent, PackageType, PublicHoliday apis and Customer Page get put post finished

--- a/src/i18n/locales/menu/tr.json
+++ b/src/i18n/locales/menu/tr.json
@@ -1,5 +1,6 @@
 {
   "Ana Sayfa": "Ana Sayfa",
-  "Tüm Kullanıcılar": "Tüm Kullanıcılar",
+  "Kullanıcılar": "Kullanıcılar",
+  "Firmalar": "Firmalar",
   "Destek Talepleri": "Destek Talepleri"
 }
