Add admin logs API and integrate with dashboard; enhance filtering and display in HomePage

--- a/src/i18n/locales/staticData/tr.json
+++ b/src/i18n/locales/staticData/tr.json
@@ -3,5 +3,13 @@
     "all": "Tümü",
     "active": "Aktif",
     "inactive": "Pasif"
+  },
+
+  "requestTypeOptions": {
+    "all": "Tümü",
+    "get": "GET",
+    "post": "POST",
+    "put": "PUT",
+    "delete": "DELETE"
   }
 }
