addedMachines Page, Packages Page, update Dashboard Page and api hook

--- a/src/i18n/locales/menu/tr.json
+++ b/src/i18n/locales/menu/tr.json
@@ -1,6 +1,7 @@
 {
   "Ana Sayfa": "Ana Sayfa",
-  "Kullanıcılar": "Kullanıcılar",
+  "Makineler": "Makineler",
   "Firmalar": "Firmalar",
+  "Paketler": "Paketler",
   "Destek Talepleri": "Destek Talepleri"
 }
