--- a/src/i18n/locales/staticData/tr.json
+++ b/src/i18n/locales/staticData/tr.json
@@ -11,5 +11,11 @@
     "post": "POST",
     "put": "PUT",
     "delete": "DELETE"
+  },
+
+  "isAuthorizedOptions": {
+    "all": "Tümü",
+    "authorized": "İzinli",
+    "unauthorized": "İzinsiz"
   }
 }
