add customer machine filter

--- a/src/i18n/locales/staticData/tr.json
+++ b/src/i18n/locales/staticData/tr.json
@@ -17,5 +17,11 @@
     "all": "Tümü",
     "authorized": "İzinli",
     "unauthorized": "İzinsiz"
+  },
+
+  "isOnlineOptions": {
+    "all": "Tümü",
+    "online": "Online",
+    "offline": "Offline"
   }
 }
