add customer machine filter 2

--- a/src/i18n/locales/staticData/tr.json
+++ b/src/i18n/locales/staticData/tr.json
@@ -23,5 +23,11 @@
     "all": "Tümü",
     "online": "Online",
     "offline": "Offline"
+  },
+
+  "isTasEnabledOptions": {
+    "all": "Tümü",
+    "enabled": "Enabled",
+    "disabled": "Disabled"
   }
 }
