add Customer Detail Page and Connection, Machines Tab Content

--- a/src/i18n/locales/meta/tr.json
+++ b/src/i18n/locales/meta/tr.json
@@ -62,5 +62,9 @@
   "customersMachines": {
     "title": "Firma Makineleri",
     "description": "Kayıtlı tüm firma makinelerini yönetin ve görüntüleyin."
+  },
+  "customersDetail": {
+    "title": "Firma Detayı",
+    "description": "Firma detaylarını yönetin ve görüntüleyin."
   }
 }
