--- a/src/i18n/locales/menu/tr.json
+++ b/src/i18n/locales/menu/tr.json
@@ -21,5 +21,7 @@
   "Resmi Tatiller": "Resmi Tatiller",
   "Bağlantılar": "Bağlantılar",
 
+  "Firma Detayı": "Firma Detayı",
+
   "Destek Talepleri": "Destek Talepleri"
 }
